--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -10,19 +10,19 @@
     - name: Build Docker Image
       command: docker build -t petstore .
       args:
-        chdir: /var/lib/jenkins/workspace/petstore
+        chdir: /var/lib/jenkins/workspace/My-CI-CD
 
     - name: tag image
-      command: docker tag petstore:latest sevenajay/petstore:latest 
+      command: docker tag petstore:latest sandeeepdocker7/petstore:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
-        username: dockerhub username
-        password: dockerhub password/PAT
+        username: sandeeepdocker7
+        password: dckr_pat_8vgOvIOJS2tmESz9lRWgYvayrsY
 
     - name: Push image
-      command: docker push sevenajay/petstore:latest
+      command: docker push sandeeepdocker7/petstore:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 sevenajay/petstore:latest
+      command: docker run -d --name pet1 -p 8081:8080 sandeeepdocker7/petstore:latest
